--- a/Client/Chess/CMakeLists.txt
+++ b/Client/Chess/CMakeLists.txt
@@ -33,6 +33,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ../message/message.h ../message/message.cpp
         match.h match.cpp match.ui
         ../gameplay.h ../gameplay.cpp
+        gamerules.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Chess APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
